[gd_scene load_steps=6 format=3 uid="uid://dqef6slr586ip"]

[ext_resource type="Script" path="res://scenes/actors/player/player_status_bar/player_status_bar.gd" id="1_81eoo"]
[ext_resource type="Texture2D" uid="uid://b7jq2iq3sss0d" path="res://scenes/actors/player/player_status_bar/bar_background.png" id="2_k281m"]
[ext_resource type="Texture2D" uid="uid://v74e50262se6" path="res://scenes/actors/player/player_status_bar/bar.png" id="3_3sibg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gdjny"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6vmpj"]
bg_color = Color(0, 0.431373, 0, 1)

[node name="PlayerStatusBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_81eoo")

[node name="BarContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -71.0
offset_right = 256.0
grow_vertical = 0

[node name="HealthBar" type="Control" parent="BarContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HealthBarBackground" type="TextureRect" parent="BarContainer/HealthBar"]
modulate = Color(0, 0, 0, 0.764706)
layout_mode = 0
offset_left = 37.0
offset_top = 7.0
offset_right = 194.0
offset_bottom = 21.0
texture = ExtResource("2_k281m")

[node name="HealthProgressBar" type="ProgressBar" parent="BarContainer/HealthBar"]
unique_name_in_owner = true
modulate = Color(0.814954, 0, 0.0146687, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 42.0
offset_top = 8.0
offset_right = -63.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_gdjny")
value = 100.0
show_percentage = false

[node name="HealthBarForeground" type="TextureRect" parent="BarContainer/HealthBar"]
layout_mode = 0
offset_top = 5.0
offset_right = 233.0
offset_bottom = 24.0
texture = ExtResource("3_3sibg")
stretch_mode = 5

[node name="StaminaBar" type="Control" parent="BarContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="StaminaBarBackground" type="TextureRect" parent="BarContainer/StaminaBar"]
layout_mode = 0
offset_left = 37.0
offset_top = 2.0
offset_right = 194.0
offset_bottom = 16.0
texture = ExtResource("2_k281m")

[node name="StaminaProgressBar" type="ProgressBar" parent="BarContainer/StaminaBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 42.0
offset_top = 3.0
offset_right = 193.0
offset_bottom = 16.0
theme_override_styles/fill = SubResource("StyleBoxFlat_6vmpj")
value = 100.0
show_percentage = false

[node name="StaminaBarForeground" type="TextureRect" parent="BarContainer/StaminaBar"]
layout_mode = 0
offset_right = 233.0
offset_bottom = 19.0
texture = ExtResource("3_3sibg")
stretch_mode = 5
